fixing hover over HIRE ME btn, added overflow:hidden in nav-menu

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -123,6 +123,7 @@ header{
         }
         div.button{
             display: flex;
+            overflow: hidden;
             background:#ffffff;
             border: none;
             border-radius: 50px;
